[package]
name = "marlin_test"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-marlin = { version = "^0.3.0", default-features = false}
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }

rayon = { version = "1" }
digest = { version = "0.9" }
derivative = { version = "2", features = ["use_core"] }

rand_chacha = { version = "0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }

rand = "0.8.5"
